#  if USE_AALIB
#  AALIB_DIR = aalib
#  endif

subdir('cairo')

subdir('flac')
subdir('gdk_pixbuf')

#  if USE_JACK
#  JACK_DIR=jack
#  endif
#
subdir('jpeg')

#
#  if USE_LIBCACA
#  LIBCACA_DIR = libcaca
#  endif
#
#  if USE_LIBDV
#  LIBDV_DIR = dv
#  endif

subdir('libpng')

#  if USE_DV1394
#  DV1394_DIR = raw1394
#  endif

subdir('pulse')

#
#  if USE_SHOUT2
#  SHOUT2_DIR = shout2
#  endif

subdir('soup')
subdir('speex')
subdir('taglib')
subdir('vpx')
subdir('wavpack')
